<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_sigle"
            android:title="@string/sigle">
        <menu>
            <item
                    android:id="@+id/list_of_sigles"
                    android:title="@string/liste_des_sigles" />
            <item
                    android:id="@+id/number_of_sigles"
                    android:title="@string/nombre_de_sigle" />
        </menu>
    </item>
    <item
            android:id="@+id/menu_module_list"
            android:title="@string/module_list">
        <menu>
            <item
                    android:id="@+id/complete_list"
                    android:title="@string/liste_complete" />
            <item
                    android:id="@+id/list_of_cs"
                    android:title="@string/liste_des_cs" />
        </menu>
    </item>
    <item
            android:id="@+id/menu_module_recycler"
            android:title="@string/module_recycler">
        <menu>
            <item
                    android:id="@+id/module_recycler_item"
                    android:title="@string/recycler" />
        </menu>
    </item>
    <item android:title="@string/module_bdoh">
        <menu>
            <item
                    android:id="@+id/bdoh_module_list"
                    android:title="@string/liste_des_modules" />
            <item
                    android:id="@+id/bdoh_add_module"
                    android:title="@string/ajout_d_un_module" />
            <item
                    android:id="@+id/bdoh_delete_module"
                    android:title="@string/suppression_d_un_module" />
        </menu>
    </item>
</menu>