<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DBModuleAddActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:expandedHintEnabled="false"
                android:hint="@string/sigle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/bdoh_sigle_it" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:expandedHintEnabled="false"
                android:hint="@string/parcours">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/bdoh_parcours_it" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:expandedHintEnabled="false"
                android:hint="@string/category">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/bdoh_category_it" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:expandedHintEnabled="false"
                android:hint="@string/credit">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/bdoh_credit_it" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/bdoh_add_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>